--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,3 +7,4 @@ $main-font: 'Space Mono', monospace;
 $background-light: #f6f8ff;
 $background-white: #fefefe;
 $clr-font-blue: #4b6a9b;
+$azure-radiance: #0079ff;
